--- a/gson/pom.xml
+++ b/gson/pom.xml
@@ -52,6 +52,11 @@
       <artifactId>error_prone_annotations</artifactId>
       <version>2.43.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.jspecify</groupId>
+      <artifactId>jspecify</artifactId>
+      <scope>compile</scope>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
