--- a/gson/pom.xml
+++ b/gson/pom.xml
@@ -52,6 +52,12 @@
       <artifactId>error_prone_annotations</artifactId>
       <version>2.43.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.codehaus.mojo</groupId>
+      <artifactId>animal-sniffer-annotations</artifactId>
+      <version>1.26</version>
+      <optional>true</optional>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
