--- a/pom.xml
+++ b/pom.xml
@@ -521,12 +521,14 @@
               </goals>
               <configuration>
                 <skip>${gson.isTestModule}</skip>
-
                 <signature>
                   <groupId>com.toasttab.android</groupId>
                   <artifactId>gummy-bears-api-23</artifactId>
                   <version>0.8.0</version>
                 </signature>
+                <annotations>
+                  <annotation>com.google.gson.internal.bind.IgnoreJRERequirement</annotation>
+                </annotations>
               </configuration>
             </execution>
           </executions>
