--- a/pom.xml
+++ b/pom.xml
@@ -521,15 +521,14 @@
               </goals>
               <configuration>
                 <skip>${gson.isTestModule}</skip>
-
                 <signature>
-                  <!-- Note: In case Android compatibility impedes Gson development too much in the
-                    future, could consider switching to https://github.com/open-toast/gummy-bears
-                    which accounts for Android desugaring and might allow usage of more Java classes -->
-                  <groupId>net.sf.androidscents.signature</groupId>
-                  <artifactId>android-api-level-21</artifactId>
-                  <version>5.0.1_r2</version>
+                  <groupId>com.toasttab.android</groupId>
+                  <artifactId>gummy-bears-api-23</artifactId>
+                  <version>0.8.0</version>
                 </signature>
+                <annotations>
+                  <annotation>com.google.gson.internal.bind.IgnoreJRERequirement</annotation>
+                </annotations>
               </configuration>
             </execution>
           </executions>
