Don't rely on Android desugaring.
Some Google libraries that rely on Gson require Android 23 *without*
desugaring, because otherwise their clients would be forced to enable
desugaring too. So revert to the standard animal-sniffer configuration,
and reinstate the local `toIntExact` implementation.

--- a/pom.xml
+++ b/pom.xml
@@ -522,9 +522,10 @@
               <configuration>
                 <skip>${gson.isTestModule}</skip>
                 <signature>
-                  <groupId>com.toasttab.android</groupId>
-                  <artifactId>gummy-bears-api-23</artifactId>
-                  <version>0.8.0</version>
+                  <!-- Google's internal use currently requires API Level 23 without desugaring. -->
+                  <groupId>net.sf.androidscents.signature</groupId>
+                  <artifactId>android-api-level-23</artifactId>
+                  <version>6.0_r3</version>
                 </signature>
                 <annotations>
                   <annotation>com.google.gson.internal.bind.IgnoreJRERequirement</annotation>
