--- a/pom.xml
+++ b/pom.xml
@@ -522,10 +522,10 @@
               <configuration>
                 <skip>${gson.isTestModule}</skip>
                 <signature>
-                  <!-- Google's internal use currently requires API Level 23 without desugaring. -->
+                  <!-- Google's internal use currently requires API Level <= 23 without desugaring. -->
                   <groupId>net.sf.androidscents.signature</groupId>
-                  <artifactId>android-api-level-23</artifactId>
-                  <version>6.0_r3</version>
+                  <artifactId>android-api-level-21</artifactId>
+                  <version>5.0.1_r2</version>
                 </signature>
                 <annotations>
                   <annotation>com.google.gson.internal.bind.IgnoreJRERequirement</annotation>
