--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,13 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>org.jspecify</groupId>
+        <artifactId>jspecify</artifactId>
+        <version>1.0.0</version>
+        <scope>provided</scope>
+      </dependency>
+
+      <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.13.2</version>
